Fix button margin on firefox

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -53,6 +53,7 @@ header {
 
       //nav-cta button
       button {
+        border: 2px solid $neutral-900;
         padding: 10px 30px;
         transition: all 0.3s ease-in-out;
 
