--- a/styles/style.css
+++ b/styles/style.css
@@ -365,6 +365,7 @@ header nav ul li:hover {
   color: hsl(270deg, 9%, 17%);
 }
 header nav ul button {
+  border: 2px solid hsl(270deg, 9%, 17%);
   padding: 10px 30px;
   transition: all 0.3s ease-in-out;
 }
